--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 #   LibreOffice (e.g., on Ubuntu: sudo apt-get install libreoffice)
 #
 # Python Dependencies:
+lxml
 Flask==2.0.3
 Werkzeug==2.0.3
 gunicorn==20.1.0
